--- a/app/views/gas_stations/_form.html.erb
+++ b/app/views/gas_stations/_form.html.erb
@@ -5,7 +5,7 @@
 
       <ul>
       <% gas_station.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <li class="bg-danger"><%= message %></li>
       <% end %>
       </ul>
     </div>
@@ -30,6 +30,12 @@
     <%= form.label :id_station %>
     <%= form.number_field :id_station %>
   </div>
+
+  <div class="field">
+    <%= form.label :avatar %>
+    <%= form.file_field :avatar %>
+  </div>
+
 
   <div class="actions">
     <%= form.submit %>
